feat: protect rest endpoint with Spring Security
