# services/book-tracking-service/src/main/resources/openapi/book-app-api.yaml
@@ -7,6 +7,9 @@ info:
 servers:
   - url: http://localhost:8080/book-tracking/api
 
+security:
+  - BearerAuth: []
+
 paths:
   /books:
     post:
@@ -50,6 +53,11 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
 
 components:
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     FileUploadRequest:
       type: object
